# Electrodrive

./: .gitignore  AGENTS.md  C  CHANGELOG_AI_UPGRADE.md  README.md  _bem_probe.py  _logger_smoketest.py  audit_kernels.py  phase0_run.sh  pyproject.toml  pytest_output.txt  root_cause_report_moderate_slab.md  run_bem_env.ps1  test_images_v2.py
.logs_fmm/: analyze_fmm_logs.py
baseline/: README.md
configs/: discovery_black_hammer_gate_ready.yaml  discovery_black_hammer_push.yaml  discovery_v0.yaml  discovery_v0_blitz.yaml  discovery_v0_dcim_fast.yaml  discovery_v0_diversity.yaml  discovery_v0_hard.yaml  discovery_v0_plane.yaml  discovery_v0_plane_sanity.yaml  discovery_v0_ramp.yaml  discovery_v0_ramp_noearly.yaml  discovery_v0_smoke.yaml  moi_learn_demo.yaml  pinn_harmonic_large.yaml  pinn_harmonic_large_vram.yaml  pinn_harmonic_large_vram_safe.yaml  pinn_smoke.yaml  train_spherefno_stage0.yaml  train_spherefno_stage0_smoke.yaml
docs/: black_hammer_changes.md  images_adaptive_collocation.md  neural_operator_surrogates.md  specs_canonical.md  stage1_sphere_dimer_foundation.md  stage1_sphere_dimer_stage13.md  step10_gfn_flow.md  symbolic_weight_modes.md  three_layer_basis_design.md  training_curricula.md
electrodrive/: __init__.py  cli.py  cli.py.bak
experiments/: bem_boundary_diagnostics.py  bem_breakdown_probe.py  bem_h_convergence_scan.py  bem_panel_nearfield_probe.py  bem_patch_scale_plane_scan.py  bem_plane_h_patch_scan.py  bem_quadrature_diagnostics.py  bem_self_diag_check.py  bem_self_diag_check_results.md  collocation_spotcheck.py  energy_sphere_out_probe.py  (+2 more)
(+689 files in other folders)
