[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "electrodrive"
version = "0.1.0"
dependencies = [
    "torch",
    "pytest",
    "numpy"
]

[project.optional-dependencies]
tests = [
    "ninja",
    "pykeops",
    "xitorch",
]
researched = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.23",
    "httpx>=0.24",
    "websockets>=10.4",
    "watchfiles>=0.20",
    "python-dotenv>=1.0",
    "jinja2>=3.1",
]
researched-test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    # duplicate core runtime deps for convenience when installing this extra alone
    "fastapi>=0.115",
    "uvicorn[standard]>=0.23",
    "httpx>=0.24",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
markers = [
    "slow: long-running tests",
]
addopts = "--ignore=staging"
norecursedirs = ["staging"]
